--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "element-plus": "^2.9.5",
     "vue": "^3.5.13",
     "vue-router": "4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
+    "unplugin-auto-import": "^19.1.0",
+    "unplugin-vue-components": "^28.4.0",
     "vite": "^6.1.0",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
