--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "@tailwindcss/vite": "^4.0.8",
     "element-plus": "^2.9.5",
+    "tailwindcss": "^4.0.8",
     "vue": "^3.5.13",
     "vue-router": "4"
   },
