--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "@tailwindcss/vite": "^4.0.8",
+    "axios": "^1.7.9",
     "element-plus": "^2.9.5",
     "tailwindcss": "^4.0.8",
     "vue": "^3.5.13",
