--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vueuse/core": "^12.7.0",
     "axios": "^1.7.9",
     "element-plus": "^2.9.5",
+    "pinia": "^3.0.1",
     "tailwindcss": "^4.0.8",
     "vue": "^3.5.13",
     "vue-router": "4"
